--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -3,3 +3,5 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=SA
 connection.password=
 ua.nure.kn.strelchenya.usermanagement.db.UserDao=ua.nure.kn.strelchenya.usermanagement.db.HsqldbUserDao
+dao.factory=ua.nure.kn.strelchenya.usermanagement.db.DaoFactoryImplementation
+
