--- a/usermanagement/build.xml
+++ b/usermanagement/build.xml
@@ -4,15 +4,15 @@
         usermanagment project
     </description>
     <property name="build-dir" value="${basedir}/target"/>
-    <property name="main-java-dir" value="${basedir}/src/main/ua/nure/kn/strelchenya/usermanagement"/>
-    <property name="test-java-dir" value="${basedir}/src/test/ua/nure/kn/strelchenya/usermanagement"/>
+    <property name="main-java-dir" value="/ua/nure/kn/strelchenya/usermanagement"/>
+    <property name="test-java-dir" value="/src/test/java/ua/nure/kn/strelchenya/usermanagement"/>
     <property name="classes-dir" value="${build-dir}/classes"/>
 
-    <property name="ant-javac-version" value="1.8"/>
+    <property name="ant-build-javac-source" value="1.8"/>
+    <property name="ant-build-javac-target" value="1.8"/>
 
-    <path id="path-test">
+    <path id="classpath-test">
         <pathelement location="lib/junit-4.10.jar"/>
-        <pathelement location="lib/hamcrest-core-1.3.jar"/>
     </path>
 
     <target name="clean" description="clean up">
@@ -28,19 +28,19 @@
 
 
     <target name="compile" depends="init" description="compile the source">
-        <javac target="${ant-javac-version}" srcdir="${main-java-dir}" destdir="${build-dir}" includeantruntime="false"/>
+        <javac target="${ant-build-javac-target}" srcdir="${main-java-dir}" destdir="${build-dir}" includeantruntime="false"/>
     </target>
 
     <target name="compile-test" depends="compile">
-        <javac target="${ant-javac-version}" srcdir="${test-java-dir}" destdir="${build-dir}" includeantruntime="false">
-            <classpath refid="path-test"/>
+        <javac target="${ant-build-javac-target}" srcdir="${test-java-dir}" destdir="${build-dir}" includeantruntime="false">
+            <classpath refid="classpath-test"/>
         </javac>
     </target>
 
     <target name="test" depends="compile-test">
         <junit printsummary="yes" haltonfailure="no">
             <classpath>
-                <path refid="path-test"/>
+                <path refid="classpath-test"/>
                 <pathelement location="${build-dir}"/>
             </classpath>
 
@@ -52,4 +52,3 @@
         </junit>
     </target>
 </project>
-
