--- a/usermanagement/db/usermanagement.properties
+++ b/usermanagement/db/usermanagement.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Fri Nov 30 00:47:07 EET 2018
+#Sat Dec 15 01:44:24 MSK 2018
 version=2.4.1
 modified=yes
 tx_timestamp=0
