--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -1,5 +1,5 @@
 connection.driver=org.hsqldb.jdbcDriver
-connection.url=jdbc:hsqldb:file:db/usermanagement
+connection.url=jdbc:hsqldb:file:f:/Java/databases/usermanagement/db/usermanagement
 connection.user=SA
 connection.password=
 ua.nure.kn.strelchenya.usermanagement.db.UserDao=ua.nure.kn.strelchenya.usermanagement.db.HsqldbUserDao
